--- a/weather/pyproject.toml
+++ b/weather/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "arcade-tdk>=2.0.0,<3.0.0",
     "requests>=2.32.5",
     "python-dotenv>=1.0.0",
+    "arcade-core>=2.3.0",
 ]
 [[project.authors]]
 name = "saeedbbm"
@@ -35,6 +36,9 @@ langchain = [
     "langchain>=0.1.0",
     "langchain-openai>=0.1.0",
     "langchain-community>=0.0.10",
+    "langchain-arcade>=0.1.0",
+    "arcade-core>=2.0.0",
+    "langgraph>=0.1.0",
 ]
 
 # Tell Arcade.dev that this package is a toolkit
